Adds MetaQuery DB to portfolio
Updates music trainer description text as well.

--- a/public/index.html
+++ b/public/index.html
@@ -86,23 +86,23 @@
     <br>
     <br>
 
-    <!-- || Gallery4 Frame  -->
+    <!-- || Gallery6 Frame  -->
     <div class="card--gallery">
       <div class="card--gallery-inner">
 
         <div class="gallery-img-section">
-          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery4Left()"></button>
-          <img id="gallery4-img" class="main-img" src="/images/gallery/music-trainer/melody.jpg">
-          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery4Right()"></button>
+          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery6Left()"></button>
+          <img id="gallery6-img" class="main-img" src="/images/gallery/metaquery/metaquery-capture3.png">
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery6Right()"></button>
         </div>
 
         <div class="gallery-right-section">
-          <h3>JavaScript Program</h3>
-          <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer & Generator</a><br><i>on-going development</i></p>
+          <h3>Personal Project</h3>
+          <p><a href="https://www.looseleashdog.com" target="_blank">MetaQuery DB</a><br><i>on-going development</i></p>
           <br>
           <h4>Tech</h4>
-          <p>ES6, WebAudio</p>
-          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/personal--music-trainer', target='_blank')">View
+          <p>Python, MySQL, MongoDB, tKinter, PyMongo</p>
+          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/python--metaquery-db', target='_blank')">View
             GitHub Repo</button>
         </div>
 
@@ -111,22 +111,17 @@
 
     <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
       <div class="card--gallery-inner" style="overflow-y: scroll;">
-        <p>This project is the conclusion to a hypothesis I had while a music teacher. At that time I did not know anything about programming other than it must follow standard logic principles. In
-          short, I theorized that if you put all the 'rules' of music theory into code and allowed for randomization in it's choices, the resultant music would be surprisingly familiar and even sound
-          pretty good at times- with only occasional awkward moments. This project is two-fold, containing a set of practice tools, as well as a music generator. The tools help a student train their
-          ear in the subjects of melody, relative pitch, pitch memory, and tempo. The music generator is a passion project that I will continue to build upon for some time. In time it will not only
-          be an expression of the power of western musical structures, but also a learning device.
+        <p>This is a desktop application used to query from multiple databases using the same user interface. The application is highly extensible, using dependency injection, software interfaces, and
+          object-oriented paradigms. It is still in development, will be adding MySQL Shell and Mongo Atlas connections.
         </p>
-        <p>Work your klangfarbenmelodie chops with multiple orchestral instrument choices. The music trainer includes a function which allows for different instruments to randomly substitute the
-          primary instrument sound, while still asking the student to repeat the pattern back. For instance, if you play piano, you can select french horn sounds to work with instead. This develops
-          the ear to be sensitive to pitch while listening to instruments outside of their familiarity. The melodic idea consisting of the same note, but different tones/instruments, is called
-          "klangfarbenmelodie". This type of exercise was extremely beneficial to my own ear during my development, and I had a difficult time finding ways to practice this type of hearing. This aural
-          skill proved to be one of the most powerful connection points in the development of my musical ear. This melody trainer facilitates the study of an invaluable skill that is difficult to
-          methodically practice.
+        <p>The primary functional requirement of this application is the ability to make queries upon multiple databases from the same window. The requirements do not encompass extensive creation of
+          records, however full SQL statements can be interpreted. The project's main limitation is the chosen UI tech. Current implementation of table display for data in tKinter is too difficult, UI
+          tech and layer needs to be changed. Usage of layered architecture and software interfaces will help in the conversion to a more robust UI.
         </p>
-
+        <p></p>
       </div>
     </div>
+
 
     <br>
     <br>
@@ -171,58 +166,110 @@
         <p></p>
       </div>
     </div>
-  </div>
 
-  <br>
-  <br>
-  <br>
-  <br>
 
-  <!-- || Gallery3 Frame  -->
-  <div class="card--gallery">
-    <div class="card--gallery-inner">
+    <br>
+    <br>
+    <br>
+    <br>
 
-      <div class="gallery-img-section">
-        <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery3Left()"></button>
-        <img id="gallery3-img" class="main-img" src="/images/gallery/lumber/capture.png">
-        <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery3Right()"></button>
+    <!-- || Gallery4 Frame  -->
+    <div class="card--gallery">
+      <div class="card--gallery-inner">
+
+        <div class="gallery-img-section">
+          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery4Left()"></button>
+          <img id="gallery4-img" class="main-img" src="/images/gallery/music-trainer/melody.jpg">
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery4Right()"></button>
+        </div>
+
+        <div class="gallery-right-section">
+          <h3>JavaScript Program</h3>
+          <p><a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer & Generator</a><br><i>on-going development</i></p>
+          <br>
+          <h4>Tech</h4>
+          <p>ES6, WebAudio, Local Storage</p>
+          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/personal--music-trainer', target='_blank')">View
+            GitHub Repo</button>
+        </div>
+
       </div>
+    </div>
 
-      <div class="gallery-right-section">
-        <h3>Full-stack Template</h3>
-        <p><a href="https://lumberjack-theme.herokuapp.com/" target="_blank">LumberJack Theme</a></p>
-        <br>
-        <h4>Tech</h4>
-        <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
-        <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/template--lumberjack', target='_blank')">View
-          GitHub Repo</button>
+    <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+      <div class="card--gallery-inner" style="overflow-y: scroll;">
+        <p>This project is the conclusion to a hypothesis I had while a music teacher. At that time I did not know anything about programming other than it must follow standard logic principles. In
+          short, I theorized that if you put all the 'rules' of music theory into code and allowed for randomization in it's choices, the resultant music would be surprisingly familiar and even sound
+          pretty good at times- with only occasional awkward moments. JavaScript and the WebAudio API are used to provide a web-based ear-trainer and infinite music generator.</p>
+
+        <p>This project is two-fold, containing a set of practice tools, as well as a music generator. The tools help a student train their ear in the subjects of melody, relative pitch, pitch
+          memory, and tempo. The music generator is a passion project that I will continue to build upon for some time. My more recent study in object-oriented principles leads me to realize the
+          entirety of the project needs redesign and overhaul to move very far forward. However, the underlying logic in how to sort through the musical information has been solved. In time it will
+          not only be an expression of the power of western musical structures, but also a learning device.
+        </p>
+        <p>The application has a high level of educational value for a student or professional. Certain skills that were difficult to practice have been made available and accentuated through the use
+          of the trainers. Work your klangfarbenmelodie chops with multiple orchestral instrument choices. The music trainer includes a function which allows for different instruments to randomly
+          substitute the primary instrument sound, while still asking the student to repeat the pattern back. This develops the ear to be sensitive to pitch while listening to instruments outside of
+          their familiarity. The melodic idea consisting of the same note, but different tones/instruments, is called "klangfarbenmelodie". This melody trainer facilitates the study of an invaluable
+          skill that is difficult to methodically practice.
+        </p>
+
       </div>
-
     </div>
-  </div>
 
-  <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
-    <div class="card--gallery-inner" style="overflow-y: scroll;">
-      <p>"LumberJack" is a full-stack template developed for small businesses and social media creators. The theme is
-        lightweight and integrates third-party services to eliminate update, security, and code-heavy issues.
-        Featuring a headless CMS with Prismic, a multi-network aggregator in Curator, and automatic email responses by
-        NodeMailer, LumberJack's needs for maintenance and updates are low. Ships with detailed setup instructions
-        accessible by any front-end developer or diligent person.
-      </p>
-      <p>Making use of third-party API's keeps the website owner from having to engage with the site code after
-        launch, keeping breakage to a minimum. LumberJack's blog is automatically generated using EJS and comes with
-        a "Custom Type" ready to upload to your Prismic repository. Curator allows owners and creators to build feeds
-        from more than one network, enabling more cross-network audience engagement.
-      </p>
-      <p>Designed for a two-color brand scheme with highly legible greyscale copy. Card elements are modular and can
-        be used in a variety of configurations, color and size. LumberJack is fully compatible with any device.
-      </p>
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <!-- || Gallery3 Frame  -->
+    <div class="card--gallery">
+      <div class="card--gallery-inner">
+
+        <div class="gallery-img-section">
+          <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery3Left()"></button>
+          <img id="gallery3-img" class="main-img" src="/images/gallery/lumber/capture.png">
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery3Right()"></button>
+        </div>
+
+        <div class="gallery-right-section">
+          <h3>Full-stack Template</h3>
+          <p><a href="https://lumberjack-theme.herokuapp.com/" target="_blank">LumberJack Theme</a><br><i>heroku-hosted</i></p>
+          <br>
+          <h4>Tech</h4>
+          <p>Node.js, Express, EJS, Prismic, Curator, NodeMailer</p>
+          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/template--lumberjack', target='_blank')">View
+            GitHub Repo</button>
+        </div>
+
+      </div>
     </div>
-  </div>
 
-  <br>
-  <br>
-  <br>
+    <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+      <div class="card--gallery-inner" style="overflow-y: scroll;">
+        <p>"LumberJack" is a full-stack template developed for small businesses and social media creators. The theme is
+          lightweight and integrates third-party services to eliminate update, security, and code-heavy issues.
+          Featuring a headless CMS with Prismic, a multi-network aggregator in Curator, and automatic email responses by
+          NodeMailer, LumberJack's needs for maintenance and updates are low. Ships with detailed setup instructions
+          accessible by any front-end developer or diligent person.
+        </p>
+        <p>Making use of third-party API's keeps the website owner from having to engage with the site code after
+          launch, keeping breakage to a minimum. LumberJack's blog is automatically generated using EJS and comes with
+          a "Custom Type" ready to upload to your Prismic repository. Curator allows owners and creators to build feeds
+          from more than one network, enabling more cross-network audience engagement.
+        </p>
+        <p>Designed for a two-color brand scheme with highly legible greyscale copy. Card elements are modular and can
+          be used in a variety of configurations, color and size. LumberJack is fully compatible with any device.
+        </p>
+      </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    
+
+  </div>
 
   <div class="banner">
     <div>
