Updates image filenames

--- a/public/index.html
+++ b/public/index.html
@@ -92,13 +92,13 @@
 
         <div class="gallery-img-section">
           <button id="gallery-btn-l" class="gallery-btn g-btn-left" type="button" onclick="gallery6Left()"></button>
-          <img id="gallery6-img" class="main-img" src="/images/gallery/metaquerydb/metaquerydb-capture3.png">
+          <img id="gallery6-img" class="main-img" src="/images/gallery/metaquerydb/capture3.png">
           <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery6Right()"></button>
         </div>
 
         <div class="gallery-right-section">
           <h3>Personal Project</h3>
-          <p><a href="https://www.looseleashdog.com" target="_blank">MetaQuery DB</a><br><i>on-going development</i></p>
+          <p>MetaQuery DB<br><i>on-going development</i></p>
           <br>
           <h4>Tech</h4>
           <p>Python, MySQL, MongoDB, tKinter, PyMongo</p>
