--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,44 @@
   <div class="gallery-container">
     <h2>Here are some examples of my work</h2>
 
+    
+    <!-- || Gallery7 Frame  -->
+    <div class="card--gallery">
+      <div class="card--gallery-inner">
+
+        <div class="gallery-img-section">
+          <button id="gallery-btn-7" class="gallery-btn g-btn-left" type="button" onclick="gallery7Left()"></button>
+          <img id="gallery7-img" class="main-img" src="/images/gallery/flow-post/flow-post-capture1.png">
+          <button id="gallery-btn-r" class="gallery-btn g-btn-right" type="button" onclick="gallery7Right()"></button>
+        </div>
+
+        <div class="gallery-right-section">
+          <h3>Productivity Project</h3>
+          <p><a href="https://flow-post.herokuapp.com" target="_blank">Flow Post</a><br><i>heroku-hosted</i></p>
+          <br>
+          <h4>Tech</h4>
+          <p>Node.js, React</p>
+          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/react--flow-post', target='_blank')">View
+            GitHub Repo</button>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="card--gallery" style="margin-top: -8px; height: 300px; ">
+      <div class="card--gallery-inner" style="overflow-y: scroll;">
+        <p>Flow Post is a skewmorphic organization application.
+        </p>
+        <p>Built with react.</p>
+        <p></p>
+      </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
     <!-- || Gallery5 Frame  -->
     <div class="card--gallery">
       <div class="card--gallery-inner">
