--- a/public/index.html
+++ b/public/index.html
@@ -111,11 +111,11 @@
             Built with react. Atypical design paradigms were necessary for the
             skewmorphic effect during the 'drag' operation. Resultant
             architecture is difficult to maintain and extend. Refactorization
-            using Hooks and Context may be possible and attempted before futher
-            development, but full display update during the drag operation must
-            be present to fulfill project requirements.
+            using Hooks and Context may be possible and will be attempted before
+            futher development, but full display update during the drag
+            operation must be present to fulfill project requirements.
           </p>
-          <p></p>
+          
         </div>
       </div>
 
