Changes gallery title descriptions
Makes titles more descriptive, allows for creativity now that 6 projects
are present.

--- a/public/index.html
+++ b/public/index.html
@@ -221,7 +221,7 @@
           </div>
 
           <div class="gallery-right-section">
-            <h3>Personal Project</h3>
+            <h3>Database Tool</h3>
             <p>MetaQuery DB<br /><i>on-going development</i></p>
             <br />
             <h4>Tech</h4>
@@ -361,7 +361,7 @@
           </div>
 
           <div class="gallery-right-section">
-            <h3>JavaScript Program</h3>
+            <h3>Music Experiment</h3>
             <p>
               <a
                 href="https://ashthomasweb.github.io/personal--music-trainer/"
