Updates profile intro

--- a/public/index.html
+++ b/public/index.html
@@ -37,8 +37,7 @@
       <div class="inner-about-container">
         <h2 class="about-title">A bit about me</h2>
         <p class="about">
-          I'm new to the field and super excited to be here! I was a classical
-          music instructor and performer for 10 years, now I'm moving on.
+          I'm a React & JS developer and programmer. I am new to the field and enjoy creating functional and beautiful tools and layouts.
         </p>
         <button
           class="github-link"
