Idea Charts title update

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
             <h3>Productivity Application</h3>
             <p>
               <a href="https://flow-post.herokuapp.com" target="_blank"
-                >Flow Post</a
+                >www.ideacharts.com</a
               >
             </p>
             <br />
@@ -99,7 +99,7 @@
       <div class="card--gallery" style="margin-top: -8px; height: 300px">
         <div class="card--gallery-inner" style="overflow-y: scroll">
           <p>
-            Flow Post is a skewmorphic organization application. Users can save
+            Idea Charts is a skewmorphic organization application. Users can save
             custom boards and layouts. Board and note colors can be set by user
             and individual notes can be checked off. A special 'Mat' function
             creates a box that always remains behind the notes, serving as a
@@ -107,12 +107,7 @@
             multi-select, mat-board grouping, and full type customization.
           </p>
           <p>
-            Built with react. Atypical design paradigms were necessary for the
-            skewmorphic effect during the 'drag' operation. Resultant
-            architecture is difficult to maintain and extend. Refactorization
-            using Hooks and Context may be possible and will be attempted before
-            futher development, but full display update during the drag
-            operation must be present to fulfill project requirements.
+            Built with react.
           </p>
           
         </div>
