Updates project descriptions and skills
Removes certifications from pane, adds new languages and skills.

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <div class="top-container">
       <h1>hi, i'm ash thomas.</h1>
       <img class="avatar" src="/images/avatar.png" />
-      <h2>i'm a developer & programmer.</h2>
+      <h2>i'm an engineer & programmer.</h2>
     </div>
 
     <div class="banner">
@@ -37,7 +37,8 @@
       <div class="inner-about-container">
         <h2 class="about-title">A bit about me</h2>
         <p class="about">
-          I'm a React & JS developer and programmer. I am new to the field and enjoy creating functional and beautiful tools and layouts.
+          React & JavaScript engineer and developer. My focus is to create
+          functional and beautiful tools and layouts.
         </p>
         <button
           class="github-link"
@@ -78,9 +79,7 @@
           <div class="gallery-right-section">
             <h3>Productivity Application</h3>
             <p>
-              <a href="https://flow-post.herokuapp.com" target="_blank"
-                >www.ideacharts.com</a
-              >
+              <a href="https://tadamat.com" target="_blank">www.tadamat.com</a>
             </p>
             <br />
             <h4>Tech</h4>
@@ -99,7 +98,7 @@
       <div class="card--gallery" style="margin-top: -8px; height: 300px">
         <div class="card--gallery-inner" style="overflow-y: scroll">
           <p>
-            Idea Charts is a skewmorphic organization application. Users can save
+            Tadamat is a skewmorphic organization application. Users can save
             custom boards and layouts. Board and note colors can be set by user
             and individual notes can be checked off. A special 'Mat' function
             creates a box that always remains behind the notes, serving as a
@@ -107,9 +106,12 @@
             multi-select, mat-board grouping, and full type customization.
           </p>
           <p>
-            Built with react.
+            Built with react. Experimentation with Hooks and Context is needed
+            before much further development. The skewmorphism wasn't obtainable
+            using Refs, if the skewmorphic effect cannot be retained in a
+            Hooks and Context architecture, all DOM queries will need to be moved into
+            state.
           </p>
-          
         </div>
       </div>
 
@@ -144,9 +146,9 @@
           <div class="gallery-right-section">
             <h3>Client Project</h3>
             <p>
-              <a href="https://www.wyldgreens.com" target="_blank"
-                >www.wyldgreens.com</a
-              >
+              <a href="https://wyldgreens.herokuapp.com" target="_blank"
+                >Wyldgreens</a
+              ><br /><i>heroku-hosted</i>
             </p>
             <br />
             <h4>Tech</h4>
@@ -165,10 +167,11 @@
       <div class="card--gallery" style="margin-top: -8px; height: 300px">
         <div class="card--gallery-inner" style="overflow-y: scroll">
           <p>
-            This project was built for a Colorado-based local business. The
-            business' main advertising medium is face to face contact and
-            referrals, which needed to be backed up with a website easily served
-            up on a customer's phone. The client requested that all materials be
+            This project was built for a Colorado-based local business,
+            unfortunately affected by the recent fires. The business' main
+            advertising medium is face to face contact and referrals, which
+            needed to be backed up with a website easily served up on a
+            customer's phone. The client requested that all materials be
             presented on a single page. Delivering all the information and
             functionality one page proved to be a challenge more than I
             expected, and the project quickly grew out of my initially staged
@@ -382,12 +385,12 @@
           <p>
             This project is the conclusion to a hypothesis I had while a music
             teacher. At that time I did not know anything about programming
-            other than it must follow standard logic principles. In short, I
-            theorized that if you put all the 'rules' of music theory into code
-            and allowed for randomization in it's choices, the resultant music
-            would be surprisingly familiar and even sound pretty good at times-
-            with only occasional awkward moments. JavaScript and the WebAudio
-            API are used to provide a web-based ear-trainer and infinite music
+            other than it must follow standard logic principles. My theory was
+            that if you put all the 'rules' of music theory into code and
+            allowed for randomization in it's choices, the resultant music would
+            be surprisingly familiar and even sound pretty good at times- with
+            only occasional awkward moments. JavaScript and the WebAudio API are
+            used to provide a web-based ear-trainer and infinite music
             generator.
           </p>
 
@@ -596,15 +599,16 @@
     </div>
 
     <div class="skills-container">
-      <h2>Languages, Certificates, and Education</h2>
+      <h2>Languages, Technology, and Education</h2>
 
       <div class="inner-skill-container">
         <div class="inner2-skill-container">
           <div class="skill-row-left">
             <p class="skill-text">
-              Full-stack 2020<br />Web Development<br />Online Bootcamp<br /><i
-                >Angela Yu</i
-              >
+              React<br />
+              ES6 / SASS<br />
+              Node / Express<br />
+              EJS / heroku
             </p>
           </div>
         </div>
@@ -612,19 +616,47 @@
         <div class="inner2-skill-container">
           <div class="skill-row-center">
             <p class="skill-text">
-              HTML5 & CSS3<br />
-              JavaScript ES6<br />
+              HTML5 / CSS3<br />
+              MySQL / Mongo<br />
+              Firebase & Firestore<br />
               Git & Github<br />
-              Node/Express/EJS
             </p>
           </div>
         </div>
 
         <div class="inner2-skill-container">
-          <div class="skill-row-right">
+          <div class="skill-row-center">
             <p class="skill-text">
+              WebAudio API<br />
+              Prismic / Curator<br />
+              Nodemailer<br />
+              Python 2.7 & 3+ tKinter
+            </p>
+          </div>
+        </div>
+
+        <br />
+        <br />
+
+        <br />
+
+        <div class="inner2-skill-container">
+          <div class="skill-row-right" style="height: 175px">
+            <p class="skill-text prev">
+              <i><span class="prev-tag">previous education</span></i>
               Bachelors of Music<br />in Performance<br /><i
                 >Classical Guitar</i
+              >
+            </p>
+          </div>
+        </div>
+
+        <div class="inner2-skill-container">
+          <div class="skill-row-right" style="height: 175px">
+            <p class="skill-text prev">
+              <i><span class="prev-tag">previous experience</span></i>
+              Adult-focused<br />Music Instruction<br /><i
+                >Owner/Operator<br />2007 - 2019</i
               >
             </p>
           </div>
