--- a/public/index.html
+++ b/public/index.html
@@ -401,9 +401,7 @@
         </div>
         <div class="exp-cont-inner">
           <p class="exp-text-right">
-            I have been involved with many aspects of design and layout, first learning to
-            stage a document for physical print using an offset press. Clearly delivering information is the key to effective
-            communication. Through teaching I have learned how to complete each problem with a fresh scope, and how subtle mis-steps affect the final result.
+            Clearly delivering information is the key to effective communication. 
           </p>
         </div>
       </div>
@@ -413,8 +411,8 @@
       <div class="remote-container">
         <div class="exp-cont-inner">
           <p class="exp-text-left">
-            My music instruction business was partially conducted via online video chat.
-            It allowed me to reach a wide range of people. Relationships can
+            I operated a classical music instruction business for 12 years, which was partially conducted online.
+            Remote work allowed me to reach a wide range of people. Relationships can
             be built and effective work performed in a remote setting, I'm
             looking forward to continuing to do so.
           </p>
@@ -445,9 +443,8 @@
       <div class="detail-container">
         <div class="exp-cont-inner">
           <p class="exp-text-left">
-            Every challenge in music or with a student is different. However
-            you overcome it, the solution must always function correctly. But
-            the solutions are frequently unique.
+            Every challenge in music or teaching is different. Through teaching I have learned how to complete each problem with a fresh scope, and how subtle mis-steps affect the final result. However
+            you overcome the challenge, the solution must always function correctly, much like coding and development.
           </p>
         </div>
         <div class="exp-cont-inner">
