Updates gallery images
Adds images to LLD, WG.

--- a/public/index.html
+++ b/public/index.html
@@ -56,12 +56,12 @@
         <div class="gallery-right-section">
           <h3>Productivity Application</h3>
           <p>
-            <a href="https://tadamat.com" target="_blank">www.tadamat.com</a>
+            <a href="https://elephantchart.com" target="_blank">www.elephantchart.com</a>
           </p>
           <br />
           <h4>Tech</h4>
           <p>Node.js, React, Firebase for Auth and Storage</p>
-          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/react--flow-post', target='_blank')">
+          <button class="github-btn" type="button" onclick="window.open('https://github.com/ashthomasweb/react--elephant-chart', target='_blank')">
             View GitHub Repo
           </button>
         </div>
@@ -71,7 +71,7 @@
     <div class="card--gallery" style="margin-top: -8px; height: 300px">
       <div class="card--gallery-inner" style="overflow-y: scroll">
         <p>
-          Tadamat is a skewmorphic organization application. Users can save
+          Elephant Chart is a skewmorphic organization application. Users can save
           custom boards and layouts. Board and note colors can be set by user
           and individual notes can be checked off. A special 'Mat' function
           creates a box that always remains behind the notes, serving as a
@@ -158,7 +158,7 @@
 
         <div class="gallery-right-section">
           <h3>Database Tool</h3>
-          <p>MetaQuery DB<br /><i>on-going development</i></p>
+          <p>MetaQuery DB<br /><i>on-going development</i><br /><i>basic UI</i></p>
           <br />
           <h4>Tech</h4>
           <p>Python, MySQL, MongoDB, tKinter, PyMongo</p>
@@ -261,7 +261,7 @@
         <div class="gallery-right-section">
           <h3>Music Experiment</h3>
           <p>
-            <a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer & Generator</a><br /><i>on-going development</i>
+            <a href="https://ashthomasweb.github.io/personal--music-trainer/" target="_blank">Music Trainer & Generator</a><br /><i>on-going development</i><br /><i>basic UI</i>
           </p>
           <br />
           <h4>Tech</h4>
