Removes heroku hosted tag

--- a/public/index.html
+++ b/public/index.html
@@ -105,7 +105,7 @@
         <div class="gallery-right-section">
           <h3>Client Project</h3>
           <p>
-            <a href="https://wyldgreens.herokuapp.com" target="_blank">Wyldgreens</a><br /><i>heroku-hosted</i>
+            <a href="https://wyldgreens.herokuapp.com" target="_blank">Wyldgreens</a>
           </p>
           <br />
           <h4>Tech</h4>
@@ -334,7 +334,7 @@
         <div class="gallery-right-section">
           <h3>Full-stack Template</h3>
           <p>
-            <a href="https://lumberjack-theme.herokuapp.com/" target="_blank">LumberJack Theme</a><br /><i>heroku-hosted</i>
+            <a href="https://lumberjack-theme.herokuapp.com/" target="_blank">LumberJack Theme</a>
           </p>
           <br />
           <h4>Tech</h4>
